# sentry_pkg

./: package.xml  setup.cfg  setup.py
config/: bridge_config.yaml  ekf.yaml  keepout_filter_params.yaml  lidar_filter.yaml  my_nav_to_pose_bt.xml  nav2_params.yaml  slam.yaml
launch/: auto.launch.py  display.launch.py  sim.launch.py
map/: field.data  field.pgm  field.yaml  my_map.data  my_map.pgm  my_map.yaml
meshes/: Analog_Port.stl  Armor_Support_Frame.stl  Armor_mount_bottom.stl  Armor_mount_upright.stl  Armor_panel_mount.stl  Armor_panel_plate.stl  Armor_side_plate.stl  B6702ZZ.stl  Back_PLate.stl  Base_Spacer.stl  Base_standoff.stl  Battery_Bottom_Plate.stl  Battery_Spacer_1.stl  Battery_cover_cap_cables.stl  Battery_mount.stl  Battery_side_plate.stl  Battery_spacer.stl  Battery_top_cover.stl  Battry_Cover_Plate.stl  Bearing.stl  Bearing_plate.stl  Bearing_spacer.stl  Body.gltf  Body.stl  Bore_Bearing.stl  Bore_Gear_1.stl  Bottom_Case_1.stl  Bottom_U.stl  Bottom_UV_charger_plate.stl  Bottom_base_standoff.stl  Bottom_plate.stl  Bottom_slipring_mount.stl  Bottom_sus_arm.stl  CENTER_DISTRIBUTION_BOARD.stl  CF_tube.stl  CF_turret_bottom.stl  Cameara_plate.stl  Camera_cover.stl  Cap_Gab_Filler.stl  Clamp_base.stl  (+489 more)
rviz/: config.rviz
sentry_pkg/: pose_translator.py  slam_relocalize_publisher.py
urdf/: sentry.urdf.xacro  sentry_description.non  sentry_description.urdf.old
world/: ARCC_Field_2026.sdf  config.json  model.config  my_world.sdf  world.sdf  world.urdf
world/assets/: composite_part_1.part
